--- a/frontend/src/app/headers/headers.component.html
+++ b/frontend/src/app/headers/headers.component.html
@@ -1,4 +1,35 @@
-<app-navigation></app-navigation>
+<nav class="nav navbar-default">
+  <div class="conatiner">
+    <div class="navbar-header">
+      <button
+        class="navbar-toggle collapsed"
+        data-toggle="collapse"
+        data-target="#navbar"
+        aria-expanded="false"
+        aria-controls="navbar"
+      >
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a routerLink="/dashboard" class="navbar-brand">Admin Dashboard</a>
+    </div>
+    <div id="navbar" class="collapse navbar-collapse">
+      <ul class="nav navbar-nav">
+        <li><a routerLink="/dashboard">Dashboard</a></li>
+        <li><a routerLink="/pages">Pages</a></li>
+        <li><a routerLink="/posts">Posts</a></li>
+        <li><a routerLink="/users">Users</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a routerLink="#">Welcome Team</a></li>
+        <li><a routerLink="/login">Logout</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
 <header id="header">
   <div class="container">
     <div class="row">
@@ -56,25 +87,25 @@
     <div class="row">
       <div class="col-md-3">
         <div class="list-group">
-          <a href="index.html" class="list-group-item active main-color-bg">
+          <a routerLink="/dashboard" class="list-group-item active main-color-bg">
             <span
               class="glyphicon glyphicon-dashboard"
               aria-hidden="true"
             ></span>
             Dashboard</a
           >
-          <a href="pages.html" class="list-group-item">
+          <a routerLink="/pages" class="list-group-item">
             <span
               class="glyphicon glyphicon-list-alt"
               aria-hidden="true"
             ></span>
             Pages <span class="badge">16</span></a
           >
-          <a href="posts.html" class="list-group-item">
+          <a routerLink="/posts" class="list-group-item">
             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
             Posts <span class="badge">200</span></a
           >
-          <a href="users.html" class="list-group-item">
+          <a routerLink="/users" class="list-group-item">
             <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
             Users <span class="badge">75</span></a
           >
