--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -9,20 +9,32 @@
         <div class="form-group">
           <label for="email">Email Id</label>
           <input
+            [(ngModel)]="email"
             type="email"
             class="form-control"
             placeholder="Your email Id"
+            name="email"
           />
         </div>
         <div class="form-group">
           <label for="password">password</label>
-          <input type="password" class="form-control" placeholder="Password" />
+          <input
+            [(ngModel)]="password"
+            type="password"
+            class="form-control"
+            placeholder="Password"
+            name="email"
+          />
         </div>
         <div class="form-group">
           <label for="rememberme"><input type="checkbox" /> Remember Me</label>
         </div>
         <div class="form-group">
-          <button type="submit" class="btn btn-success form-control">
+          <button
+            type="submit"
+            class="btn btn-success form-control"
+            (click)="login()"
+          >
             submit
           </button>
         </div>
